Add images of 3 of the 5 regular cat cards

--- a/history.txt
+++ b/history.txt
@@ -19,3 +19,5 @@
 - Added Defuse (that places card randomly)
 4/21/2024
 - Analyzed no play opponent (that also doesn't play defuses) where you start with 1 defuse
+- Analyzed skip only game under optimal play
+- Added Beard Cat, Cattermelon, Tacocat images
