--- a/history.txt
+++ b/history.txt
@@ -21,3 +21,5 @@
 - Analyzed no play opponent (that also doesn't play defuses) where you start with 1 defuse
 - Analyzed skip only game under optimal play
 - Added Beard Cat, Cattermelon, Tacocat images
+5/2/2024
+- Analyzed skip only game under optimal play, but players start with 1 defuse each
