Add Hairy Potato Cat img

--- a/history.txt
+++ b/history.txt
@@ -24,3 +24,6 @@
 5/2/2024
 - Analyzed skip only game under optimal play, but players start with 1 defuse each
 - Update Game constructor for more settings options
+- Add DrawBot
+- Add DPBot (DrawBot was not optimal for the targeted variation)
+- Added Rainbow Ralphing Cat, Hairy Potato Cat images
