Improve table display again

--- a/history.txt
+++ b/history.txt
@@ -30,3 +30,4 @@
 - Update Game class to separate turn and turnCount
 - Improve game display
 - Add turn display
+- Much pain through CSS but revamped game display again and added turn arrow
