--- a/history.txt
+++ b/history.txt
@@ -33,3 +33,4 @@
 - Much pain through CSS but revamped game display again and added turn arrow
 5/3/2024
 - Rewrote handlers (turn, end, draw, play) code in Game class for greater flexibility and functionality
+- Write utility function objAdd
