--- a/history.txt
+++ b/history.txt
@@ -34,3 +34,5 @@
 5/3/2024
 - Rewrote handlers (turn, end, draw, play) code in Game class for greater flexibility and functionality
 - Write utility function objAdd
+- Create objSum utility function
+- Worked on analyzing skips + defuse in deck (1.4). Didn't completely finish debugging though
