--- a/history.txt
+++ b/history.txt
@@ -55,4 +55,6 @@
 - Worked on GUI
   - Add option to hide hands
   - Add User class in Bots.js (for attaching event handlers) & worked on CSS
+  - Game is now playable! Use User class, click on card to play and deck to draw!
+  - Add event log
 - Update README.md to include brief runtime analysis
